--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
     <link rel="stylesheet" href="css/calendar.exponential-acceleration.css">
     <link rel="stylesheet" href="css/calendar.extraordinary-achievement.css">
+    <link rel="stylesheet" href="css/calendar.fabulous-evening.css">
     <link rel="stylesheet" href="css/calendar.fairytale-charm.css">
     <link rel="stylesheet" href="css/calendar.fairytale-town.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
@@ -1003,6 +1004,7 @@
                 <option value="expedient-path">Expedient Path</option>
                 <option value="exponential-acceleration">Exponential Acceleration</option>
                 <option value="extraordinary-achievement">Extraordinary Achievement</option>
+                <option value="fabulous-evening">Fabulous Evening</option>
                 <option value="fairytale-charm">Fairytale Charm</option>
                 <option value="fairytale-town">Fairytale Town</option>
                 <option value="fast-track">Fast Track</option>
