--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
     <link rel="stylesheet" href="css/calendar.spring-silence.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.stay-cool.css">
+    <link rel="stylesheet" href="css/calendar.stay-curious.css">
     <link rel="stylesheet" href="css/calendar.stay-positive.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.still-a-highlight.css">
@@ -1266,6 +1267,7 @@
                 <option value="spring-silence">Spring Silence</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="stay-cool">Stay Cool</option>
+                <option value="stay-curious">Stay Curious</option>
                 <option value="stay-positive">Stay Positive</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="still-a-highlight">Still a Highlight</option>
