--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <link rel="stylesheet" href="css/calendar.best-response.css">
     <link rel="stylesheet" href="css/calendar.be-yourself.css">
     <link rel="stylesheet" href="css/calendar.bigboss-style.css">
+    <link rel="stylesheet" href="css/calendar.big-crown.css">
     <link rel="stylesheet" href="css/calendar.big-dream.css">
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.big-pacific.css">
@@ -866,6 +867,7 @@
                 <option value="best-response">Best Response</option>
                 <option value="be-yourself">Be Yourself</option>
                 <option value="bigboss-style">Bigboss Style</option>
+                <option value="big-crown">Big Crown</option>
                 <option value="big-dream">Big Dream</option>
                 <option value="big-fashion">Big Fashion</option>
                 <option value="big-pacific">Big Pacific</option>
