--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.big-pacific.css">
     <link rel="stylesheet" href="css/calendar.black-bird.css">
+    <link rel="stylesheet" href="css/calendar.black-classic.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
@@ -872,6 +873,7 @@
                 <option value="big-fashion">Big Fashion</option>
                 <option value="big-pacific">Big Pacific</option>
                 <option value="black-bird">Black Bird</option>
+                <option value="black-classic">Black Classic</option>
                 <option value="black-coffee">Black Coffee</option>
                 <option value="black-fashion">Black Fashion</option>
                 <option value="black-hacker">Black Hacker</option>
