--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-tropics.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
+    <link rel="stylesheet" href="css/calendar.winter-trails.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
     <link rel="stylesheet" href="css/calendar.world-champion.css">
@@ -1367,6 +1368,7 @@
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-tropics">Wild Tropics</option>
                 <option value="wild-wonders">Wild Wonders</option>
+                <option value="winter-trails">Winter Trails</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
                 <option value="world-champion">World Champion</option>
