--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
+    <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
     <link rel="stylesheet" href="css/calendar.supreme-level.css">
     <link rel="stylesheet" href="css/calendar.surfing-club.css">
@@ -1292,6 +1293,7 @@
                 <option value="summer-breeze">Summer Breeze</option>
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunny-beach">Sunny Beach</option>
+                <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
                 <option value="sunset-magic">Sunset Magic</option>
                 <option value="supreme-level">Supreme Level</option>
                 <option value="surfing-club">Surfing Club</option>
