--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
+    <link rel="stylesheet" href="css/calendar.eighty-mile-beach.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
@@ -996,6 +997,7 @@
                 <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="early-dreams">Early Dreams</option>
+                <option value="eighty-mile-beach">Eighty Mile Beach</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
