--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.in-your-dreams.css">
+    <link rel="stylesheet" href="css/calendar.island-beauty.css">
     <link rel="stylesheet" href="css/calendar.island-breeze.css">
     <link rel="stylesheet" href="css/calendar.island-of-rainbows.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
@@ -1095,6 +1096,7 @@
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="in-your-dreams">In Your Dreams</option>
+                <option value="island-beauty">Island Beauty</option>
                 <option value="island-breeze">Island Breeze</option>
                 <option value="island-of-rainbows">Island of Rainbows</option>
                 <option value="japan-emperor">Japan's Emperor</option>
