--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orange-dragon.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
+    <link rel="stylesheet" href="css/calendar.our-favorite-hangout.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-blue.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
@@ -1194,6 +1195,7 @@
                 <option value="orange-country">Orange Country</option>
                 <option value="orange-dragon">Orange Dragon</option>
                 <option value="orion-constellation">Orion Constellation</option>
+                <option value="our-favorite-hangout">Our Favorite Hangout</option>
                 <option value="out-of-the-blue">Out of the Blue</option>
                 <option value="out-of-the-box">Out of the Box</option>
                 <option value="overnight-train">Overnight Train</option>
