--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
+    <link rel="stylesheet" href="css/calendar.best-of-technology.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
     <link rel="stylesheet" href="css/calendar.be-yourself.css">
@@ -869,6 +870,7 @@
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
+                <option value="best-of-technology">Best of Technology</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
                 <option value="be-yourself">Be Yourself</option>
