--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
     <link rel="stylesheet" href="css/calendar.technological-future.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
+    <link rel="stylesheet" href="css/calendar.the-best-kind-of-view.css">
     <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
@@ -1316,6 +1317,7 @@
                 <option value="technological-future">Technological Future</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
+                <option value="the-best-kind-of-view">The Best Kind of View</option>
                 <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
