--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
     <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
     <link rel="stylesheet" href="css/calendar.tech-innovator.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
+    <link rel="stylesheet" href="css/calendar.technological-innovation.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
     <link rel="stylesheet" href="css/calendar.the-best-kind-of-view.css">
@@ -1315,6 +1316,7 @@
                 <option value="take-me-to-summer">Take Me to Summer</option>
                 <option value="tech-innovator">Tech Innovator</option>
                 <option value="technological-future">Technological Future</option>
+                <option value="technological-innovation">Technological Innovation</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
                 <option value="the-best-kind-of-view">The Best Kind of View</option>
