--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.different-perspective.css">
     <link rel="stylesheet" href="css/calendar.digital-excellence.css">
+    <link rel="stylesheet" href="css/calendar.digital-ocean.css">
     <link rel="stylesheet" href="css/calendar.digital-progress.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
@@ -981,6 +982,7 @@
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="different-perspective">Different Perspective</option>
                 <option value="digital-excellence">Digital Excellence</option>
+                <option value="digital-ocean">Digital Ocean</option>
                 <option value="digital-progress">Digital Progress</option>
                 <option value="distant-skies">Distant Skies</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
