--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
     <link rel="stylesheet" href="css/calendar.secret-night.css">
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     <link rel="stylesheet" href="css/calendar.selfless-programmer.css">
+    <link rel="stylesheet" href="css/calendar.senior-management.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
     <link rel="stylesheet" href="css/calendar.shades-of-blue.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
@@ -1266,6 +1267,7 @@
                 <option value="secret-night">Secret Night</option>
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="selfless-programmer">Selfless Programmer</option>
+                <option value="senior-management">Senior Management</option>
                 <option value="serene-shores">Serene Shores</option>
                 <option value="shades-of-blue">Shades Of Blue</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
