--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-gold.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
+    <link rel="stylesheet" href="css/calendar.blue-island-waters.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
@@ -906,6 +907,7 @@
                 <option value="blue-frost">Blue Frost</option>
                 <option value="blue-gold">Blue & Gold</option>
                 <option value="blue-ice">Blue Ice</option>
+                <option value="blue-island-waters">Blue Island Waters</option>
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
