--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
     <link rel="stylesheet" href="css/calendar.every-little-step-counts.css">
     <link rel="stylesheet" href="css/calendar.excellent-mood.css">
     <link rel="stylesheet" href="css/calendar.excellent-performance.css">
+    <link rel="stylesheet" href="css/calendar.exceptional-quality.css">
     <link rel="stylesheet" href="css/calendar.executive-management.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
@@ -1022,6 +1023,7 @@
                 <option value="every-little-step-counts">Every Little Step Counts</option>
                 <option value="excellent-mood">Excellent Mood</option>
                 <option value="excellent-performance">Excellent Performance</option>
+                <option value="exceptional-quality">Exceptional Quality</option>
                 <option value="executive-management">Executive Management</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="expedient-path">Expedient Path</option>
