--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.color-of-my-dreams.css">
+    <link rel="stylesheet" href="css/calendar.colors-of-a-dream.css">
     <link rel="stylesheet" href="css/calendar.color-symphony.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
@@ -952,6 +953,7 @@
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="color-of-my-dreams">Color of My Dreams</option>
+                <option value="colors-of-a-dream">Colors of a Dream</option>
                 <option value="color-symphony">Color Symphony</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
