--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
     <link rel="stylesheet" href="css/calendar.the-best-kind-of-view.css">
     <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
+    <link rel="stylesheet" href="css/calendar.the-black-lake.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-burning-heart-of-the-sahara.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
@@ -1334,6 +1335,7 @@
                 <option value="the-best-kind-of-view">The Best Kind of View</option>
                 <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
+                <option value="the-black-lake">The Black Lake</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-burning-heart-of-the-sahara">The Burning Heart of the Sahara</option>
                 <option value="the-dead-sea">The Dead Sea</option>
@@ -1342,7 +1344,7 @@
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-finest-green-tea">The Finest Green Tea</option>
-                 <option value="the-first-prize">The First Prize</option>
+                <option value="the-first-prize">The First Prize</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-green-mist">The Green Mist</option>
