--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
     <link rel="stylesheet" href="css/calendar.random-coincidence.css">
     <link rel="stylesheet" href="css/calendar.real-results.css">
+    <link rel="stylesheet" href="css/calendar.red-desert.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.remarkable-city.css">
@@ -505,6 +506,7 @@
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
+    <link rel="stylesheet" href="css/calendar.summer-sky.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
@@ -1254,6 +1256,7 @@
                 <option value="rain-waltz">Rain Waltz</option>
                 <option value="random-coincidence">Random Coincidence</option>
                 <option value="real-results">Real Results</option>
+                <option value="red-desert">Red Desert</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="remarkable-city">Remarkable City</option>
@@ -1316,6 +1319,7 @@
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
                 <option value="summer-breeze">Summer Breeze</option>
+                <option value="summer-sky">Summer Sky</option>
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
