--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.magic-colors.css">
     <link rel="stylesheet" href="css/calendar.magic-fly.css">
+    <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
@@ -1149,7 +1150,8 @@
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="magic-colors">Magic Colors</option>
                 <option value="magic-fly">Magic Fly</option>
-                <option value="main-stream">Main Stream</option>
+                <option value="magic-fly">Magic Fly</option>
+                <option value="magnificent-symbol">Magnificent Symbol</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
