--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.a-desert-island.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
+    <link rel="stylesheet" href="css/calendar.adriatic-shores.css">
     <link rel="stylesheet" href="css/calendar.a-foraging-trip.css">
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
     <link rel="stylesheet" href="css/calendar.a-good-chapter.css">
@@ -841,6 +842,7 @@
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="a-desert-island">A Desert Island</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
+                <option value="adriatic-shores">Adriatic Shores</option>
                 <option value="a-foraging-trip">A Foraging Trip</option>
                 <option value="a-forward-move">A Forward Move</option>
                 <option value="a-good-chapter">A Good Chapter</option>
