--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.a-simple-task.css">
     <link rel="stylesheet" href="css/calendar.a-solitude-moment.css">
+    <link rel="stylesheet" href="css/calendar.a-stunning-shoreline.css">
     <link rel="stylesheet" href="css/calendar.a-thing-of-beauty.css">
     <link rel="stylesheet" href="css/calendar.a-turning-point.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
@@ -878,6 +879,7 @@
                 <option value="art-studio">Art Studio</option>
                 <option value="a-simple-task">A Simple Task</option>
                 <option value="a-solitude-moment">A Solitude Moment</option>
+                <option value="a-stunning-shoreline">A Stunning Shoreline</option>
                 <option value="a-thing-of-beauty">A Thing of Beauty</option>
                 <option value="a-turning-point">A Turning Point</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
