--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/calendar.action-time.css">
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.a-desert-island.css">
+    <link rel="stylesheet" href="css/calendar.adriatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.adriatic-shores.css">
     <link rel="stylesheet" href="css/calendar.adriatic-skies.css">
@@ -844,6 +845,7 @@
                 <option value="action-time">Action Time</option>
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="a-desert-island">A Desert Island</option>
+                <option value="adriatic-coastline">Adriatic Coastline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="adriatic-shores">Adriatic Shores</option>
                 <option value="adriatic-skies">Adriatic Skies</option>
