--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
     <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
+    <link rel="stylesheet" href="css/calendar.lush-green-mountains.css">
     <link rel="stylesheet" href="css/calendar.luxury-design.css">
     <link rel="stylesheet" href="css/calendar.luxury-life.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
@@ -543,6 +544,7 @@
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-finest-green-tea.css">
     <link rel="stylesheet" href="css/calendar.the-first-prize.css">
+    <link rel="stylesheet" href="css/calendar.the-gold-standard.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-green-mist.css">
@@ -1156,6 +1158,7 @@
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
+                <option value="lush-green-mountains">Lush Green Mountains</option>
                 <option value="luxury-design">Luxury Design</option>
                 <option value="luxury-life">Luxury Life</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
@@ -1363,6 +1366,7 @@
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-finest-green-tea">The Finest Green Tea</option>
                 <option value="the-first-prize">The First Prize</option>
+                <option value="the-gold-standard">The Gold Standard</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-green-mist">The Green Mist</option>
