--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.night-mode-design.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
+    <link rel="stylesheet" href="css/calendar.no-place-like-home.css">
     <link rel="stylesheet" href="css/calendar.northern-lights.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
@@ -1209,6 +1210,7 @@
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-mode-design">Night Mode Design</option>
                 <option value="night-sky">Night Sky</option>
+                <option value="no-place-like-home">No Place like Home</option>
                 <option value="northern-lights">Northern Lights</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="north-pole">North Pole</option>
