--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.we-fly-higher.css">
+    <link rel="stylesheet" href="css/calendar.west-hollywood.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.white-steamboat.css">
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
@@ -1417,6 +1418,7 @@
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="we-fly-higher">We Fly Higher</option>
+                <option value="west-hollywood">West Hollywood</option>
                 <option value="white-shark">White Shark</option>
                 <option value="white-steamboat">White Steamboat</option>
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
