--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
     <link rel="stylesheet" href="css/calendar.right-on-track.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
+    <link rel="stylesheet" href="css/calendar.rocky-mountains.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
@@ -1288,6 +1289,7 @@
                 <option value="right-on-track">Right on Track</option>
                 <option value="rising-sun">Rising Sun</option>
                 <option value="robin-good">Robin Good</option>
+                <option value="rocky-mountains">Rocky Mountains</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
                 <option value="science-fiction">Science Fiction</option>
