--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
     <link rel="stylesheet" href="css/calendar.for-the-last-time.css">
     <link rel="stylesheet" href="css/calendar.forward-thinking.css">
     <link rel="stylesheet" href="css/calendar.free-flight.css">
+    <link rel="stylesheet" href="css/calendar.free-style.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frontier-unknown.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
@@ -1068,6 +1069,7 @@
                 <option value="for-the-last-time">For the Last Time</option>
                 <option value="forward-thinking">Foward Thinking</option>
                 <option value="free-flight">Free Flight</option>
+                <option value="free-style">Free Style</option>
                 <option value="fresh-start">Fresh Start</option>
                 <option value="frontier-unknown">Frontier Unknown</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
