--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.time-to-chill.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
+    <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
@@ -1404,6 +1405,7 @@
                 <option value="time-machine">Time Machine</option>
                 <option value="time-to-chill">Time to Chill</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
+                <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
                 <option value="tropical-nature">Tropical Nature</option>
