--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
     <link rel="stylesheet" href="css/calendar.stay-curious.css">
     <link rel="stylesheet" href="css/calendar.stay-positive.css">
     <link rel="stylesheet" href="css/calendar.stay-that-way.css">
+    <link rel="stylesheet" href="css/calendar.stay-your-way.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.still-a-highlight.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
@@ -1335,6 +1336,7 @@
                 <option value="stay-curious">Stay Curious</option>
                 <option value="stay-positive">Stay Positive</option>
                 <option value="stay-that-way">Stay That Way</option>
+                <option value="stay-your-way">Stay Your Way</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="still-a-highlight">Still a Highlight</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
