--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
     <link rel="stylesheet" href="css/calendar.microtactic-environment.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
+    <link rel="stylesheet" href="css/calendar.midnight-sun.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
@@ -1189,6 +1190,7 @@
                 <option value="microtactic-environment">Microtactic Environment</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
+                <option value="midnight-sun">Midnight Sun</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
