--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.we-fly-higher.css">
     <link rel="stylesheet" href="css/calendar.west-hollywood.css">
+    <link rel="stylesheet" href="css/calendar.when-style-speaks-first.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.white-steamboat.css">
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
@@ -1437,6 +1438,7 @@
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="we-fly-higher">We Fly Higher</option>
                 <option value="west-hollywood">West Hollywood</option>
+                <option value="when-style-speaks-first">When Style Speaks First</option>
                 <option value="white-shark">White Shark</option>
                 <option value="white-steamboat">White Steamboat</option>
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
