--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <link rel="stylesheet" href="css/calendar.bora-bora.css">
     <link rel="stylesheet" href="css/calendar.box-of-surprises.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
+    <link rel="stylesheet" href="css/calendar.break-the-night.css">
     <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
     <link rel="stylesheet" href="css/calendar.brilliant-white.css">
@@ -955,6 +956,7 @@
                 <option value="bora-bora">Bora Bora</option>
                 <option value="box-of-surprises">Box of Surprises</option>
                 <option value="breaking-point">Breaking Point</option>
+                <option value="break-the-night">Break the Night</option>
                 <option value="breathtaking-view">Breathtaking View</option>
                 <option value="bright-line">Bright Line</option>
                 <option value="brilliant-white">Brilliant White</option>
