--- a/index.html
+++ b/index.html
@@ -1488,6 +1488,13 @@
 
         <footer>
             <p>Developed by Sergey Reizman - © 2025</p>
+            <a href="https://www.gofundme.com/f/YOUR-CAMPAIGN-ID" target="_blank">
+                <button
+                    style="background:#02a95c; color:white; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
+                    💚 Support This Project on Bit +972587516163
+                </button>
+            </a>
+
         </footer>
 
         <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">
