--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <link rel="stylesheet" href="css/calendar.black-magic.css">
     <link rel="stylesheet" href="css/calendar.black-mountain.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
+    <link rel="stylesheet" href="css/calendar.black-panther.css">
     <link rel="stylesheet" href="css/calendar.black-pear.css">
     <link rel="stylesheet" href="css/calendar.black-pearl.css">
     <link rel="stylesheet" href="css/calendar.black-style.css">
@@ -929,6 +930,7 @@
                 <option value="black-magic">Black Magic</option>
                 <option value="black-mountain">Black Mountain</option>
                 <option value="black-orange">Black & Orange</option>
+                <option value="black-panther">Black Panther</option>
                 <option value="black-pear">Black Pear</option>
                 <option value="black-pearl">Black Pearl</option>
                 <option value="black-style">Black Style</option>
