--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@
 
         <footer>
             <p>Developed by Sergey Reizman - © 2025</p>
-            <a href="https://www.israelgives.org/fundme/" target="_blank">
+            <a href="https://my.israelgives.org/en/fundme/Interactive_Calendar" target="_blank">
                 <button
                     style="background:#4d73ee; color:white; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
                     💚 Support This Project on Bit +972587516163
