--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     <link rel="stylesheet" href="css/calendar.bright-line.css">
     <link rel="stylesheet" href="css/calendar.brilliant-white.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
+    <link rel="stylesheet" href="css/calendar.business-class.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
     <link rel="stylesheet" href="css/calendar.california-sunshine.css">
@@ -963,6 +964,7 @@
                 <option value="bright-line">Bright Line</option>
                 <option value="brilliant-white">Brilliant White</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
+                <option value="business-class">Business Class</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="california-sunshine">California Sunshine</option>
@@ -995,6 +997,7 @@
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-garden">Coral Garden</option>
                 <option value="coral-reef">Coral Reef</option>
+                <option value="core">Choose Layout Mode</option>
                 <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cosmic-perspective">Cosmic Perspective</option>
                 <option value="cracked-ice">Cracked Ice</option>
