--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-atlantic.css">
     <link rel="stylesheet" href="css/calendar.coastal-beauty.css">
+    <link rel="stylesheet" href="css/calendar.coastal-gulf.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coconut-islands.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
@@ -987,6 +988,7 @@
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-atlantic">Coastal Atlantic</option>
                 <option value="coastal-beauty">Coastal Beauty</option>
+                <option value="coastal-gulf">Coastal Gulf</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coconut-islands">Coconut Islands</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
