--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@
                 <option value="one-dream">One Dream</option>
                 <option value="one-step-ahead">One Step Ahead</option>
                 <option value="one-step-at-a-time">One Step at a Time</option>
-                <option value="one-way-ticket">One Way Ticket</option>
+                <option value="one-way-ticket">One-Way Ticket</option>
                 <option value="on-the-island">On the Island</option>
                 <option value="on-the-wild-side">On the Wild Side</option>
                 <option value="orange-country">Orange Country</option>
