--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <link rel="stylesheet" href="css/calendar.coconut-islands.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
+    <link rel="stylesheet" href="css/calendar.colombian-jungle.css">
     <link rel="stylesheet" href="css/calendar.color-of-my-dreams.css">
     <link rel="stylesheet" href="css/calendar.colors-of-a-dream.css">
     <link rel="stylesheet" href="css/calendar.color-symphony.css">
@@ -993,6 +994,7 @@
                 <option value="coconut-islands">Coconut Islands</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
+                <option value="colombian-jungle">Colombian Jungle</option>
                 <option value="color-of-my-dreams">Color of My Dreams</option>
                 <option value="colors-of-a-dream">Colors of a Dream</option>
                 <option value="color-symphony">Color Symphony</option>
